# 2d-cellular-automata-simulation

./: .gitignore  CMakeLists.txt  README.md  cell.cpp  cell.h  cellular_automata.cpp  cellular_automata.h  main.cpp  main.h
.cache/clangd/index/: cell.cpp.353FD4DB2387CE42.idx  cell.h.244412170231FFF4.idx  cellular_automata.cpp.5C99FB363F602F85.idx  cellular_automata.h.60C321FC13F85B90.idx  main.cpp.ED056B9227213A23.idx  node.cpp.A1A41F12506F1E02.idx  raygui.h.8251595753970C00.idx  test_cell.cpp.BA38EA11782E2505.idx
.github/workflows/: cmake-multi-platform.yml
libs/: raygui.h
src/: CMakeLists.txt  cell.cpp  cell.h  cellular_automata.cpp  cellular_automata.h  node.cpp  node.h
tests/: CMakeLists.txt  test_cell.cpp
